2003-02-19  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/makefile.gnu:
	Use libtcl.a rather than libcygtcl83.a for Cygwin build

	* standalone/wxwin/admindlg.cpp:
	Accommodate const char * returned by Tcl_SetVar() and
	Tcl_GetStringResult() in Tcl 8.4.

	* standalone/wxwin/configtool.cpp: Call Tcl_FindExecutable().

2003-02-17  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/mainwin.cpp: Update path to configtool HTML docs.

2003-02-13  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/admindlg.cpp,
	  standalone/wxwin/configtooldoc.cpp,
	  standalone/wxwin/configtool.cpp,
	  standalone/wxwin/mainwin.cpp,
	  standalone/wxwin/appsettings.cpp:
	Look for all persistent application settings under
        "HKEY_CURRENT_USER\Software\eCos Configuration Tool\"
	for consistency.

	* standalone/wxwin/appsettings.cpp:
	Board 'reset type' is determined at run-time and no longer persistent.

	* standalone/wxwin/configtooldoc.cpp:
	Determine board reset type by looking for "cyg_test_is_simulator=1"
	rather than just "cyg_test_is_simulator" since "cyg_test_simulator=0"
	is also possible.

	* standalone/wxwin/mainwin.cpp:
	Supress obsolete menu items.

	* standalone/wxwin/platformeditordialog.cpp:
	Replace LF (rather than CRLF) with ';' when storing GDB commands.

2003-02-10  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/runtestsdlg.cpp,
	  standalone/wxwin/runtestsdlg.h:
	Call the "Reset Board" message box in the primary thread rather than
	the worker thread for correct operation under Linux.

2003-02-05  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/configtooldoc.cpp,
	  standalone/wxwin/platformeditordlg.cpp,
	  standalone/wxwin/runtestsdlg.cpp:
	Eliminate .exe suffix handling when running eCos tests. Latest
	cross toolchains do not generate a .exe suffix.

	* standalone/wxwin/symbols.h: Version number 2.11 -> 2.12

2003-02-03  John Dallaway  <jld@ecoscentric.com>
